Add code refactoring and Integration test cases
